Add Bootstrap and Jquery dependencies to pom

--- a/devopsbuddy/src/main/resources/templates/index.html
+++ b/devopsbuddy/src/main/resources/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Hello world</title>
-    <h1>Hello World application</h1>
+    <h1>Hello World Bootstrap application</h1>
 </head>
 <body>
 
